add_executable(t1 t1.cpp)
add_executable(t2 t2.cpp)
add_executable(t3 t3.cpp)
add_executable(t4 t4.cpp)
add_executable(make_dict make_dict.cpp)
add_executable(other other.cpp)
add_executable(def def.cpp def_macro.hpp new_macro.hpp)
add_executable(struct_for_struct struct_for_struct.cpp)
add_executable(template_macro template_macro.cpp)
add_executable(specificator_type specificator_type.cpp)
add_executable(addr_check addr_check.cpp)
target_link_libraries(addr_check core)

add_executable(constexpr_if constexpr_if.cpp)
add_executable(constexpr_if2 constexpr_if2.cpp)
add_executable(constexpr_if3 constexpr_if3.cpp)
add_executable(constexpr_if4 constexpr_if4.cpp)

add_subdirectory(new_pack)
add_subdirectory(packv2)